--- a/www/paginas/formularioChamado.html
+++ b/www/paginas/formularioChamado.html
@@ -37,7 +37,7 @@
             <tbody>
               <tr>
                 <td> Capturar imagem do Acidente</td>
-                <td> <a  onclick="var x = capturarImagem();"  class="waves-effect waves-circle waves-red btn-floating secondary-content red"><i class="material-icons">photo</i></a>
+                <td> <a  onclick="capturarImagem();"  class="waves-effect waves-circle waves-red btn-floating secondary-content red"><i class="material-icons">photo</i></a>
                 </td>
               </tr>
             </tbody>
