--- a/paginas/formularioChamado.html
+++ b/paginas/formularioChamado.html
@@ -26,7 +26,7 @@
         </div>
         <div class="row">
           <div class="input-field col s12">
-            <input id="telefone" type="number" class="validate">
+            <input id="telefone" type="file" class="validate">
             <label for="telefone">Telefone</label>
           </div>
         </div>
