--- a/paginas/formularioChamado.html
+++ b/paginas/formularioChamado.html
@@ -43,7 +43,7 @@
             </tbody>
        </table> 
        <div >
-         <img id="htmlImagem"  class="responsive-img" />
+         <img id="htmlImagem"  class="responsive-img" ng-model="chamado.htmlImagem"/>
        </div>
        <button class="btn waves-effect waves-light red " type="submit" name="action" ng-click="enviarForm(chamado)" ng-disabled="!formChamado.$valid">Enviar
            <i class="material-icons right">send</i>
