--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
     <!-- End Links Agular -->
 
      <script src='js/rotas.js'></script>
+     <script src='js/camera.js'></script>
      <script type="text/javascript" src="js/geolocalizacao.js"></script>
      <script type="text/javascript" src="cordova.js"></script>
 
