--- a/paginas/formularioChamado.html
+++ b/paginas/formularioChamado.html
@@ -36,7 +36,7 @@
             <tbody>
               <tr>
                 <td> Capturar imagem do Acidente</td>
-                <td> <a  ng-click="capturarImagem();"  class="waves-effect waves-circle waves-red btn-floating secondary-content red"><i class="material-icons">photo</i></a>
+                <td> <a  onclick="capturarImagem();"  class="waves-effect waves-circle waves-red btn-floating secondary-content red"><i class="material-icons">photo</i></a>
                 </td>
               </tr>
             </tbody>
