--- a/paginas/formularioChamado.html
+++ b/paginas/formularioChamado.html
@@ -12,21 +12,29 @@
           </div>
         </div>
         <div class="row">
-          <div class="input-field col s12">
-            <input  id="endereco" type="text" class="validate">
-            <label for="endereco">Endereço</label>
+          <div class="input-field col s6">
+            <input  id="rua" type="text" class="validate" ng-model="chamado.rua">
+            <label for="rua">Rua</label>
+          </div>
+          <div class="input-field col s6">
+            <input  id="numero" type="text" class="validate" ng-model="chamado.numero">
+            <label for="numero">Número</label>
           </div>
         </div>
         <div class="row">
-          <div class="input-field col s12">
-            <input id="ref" type="text" class="validate">
+          <div class="input-field col s6">
+            <input id="bairro" type="text" class="validate" ng-model="chamado.bairro">
+            <label for="bairro">Bairro</label>
+          </div>
+         <div class="input-field col s6">
+            <input id="cidade" type="text" class="validate" ng-model="chamado.cidade">
+            <label for="cidade">Cidade</label>
+          </div>
+        </div>
+        <div class="row">
+          <div class="input-field col 12">
+            <input id="ref" type="text" class="validate" ng-model="chamado.ref">
             <label for="ref">Ponto de Referência</label>
-          </div>
-        </div>
-        <div class="row">
-          <div class="input-field col s12">
-            <input id="telefone" type="number" class="validate">
-            <label for="telefone">Telefone</label>
           </div>
         </div>
 
@@ -42,7 +50,7 @@
             </tbody>
        </table> 
        <div >
-         <img id="htmlImagem"  class="responsive-img" ng-model="chamado.htmlImagem"/>
+         <img id="htmlImagem"  class="responsive-img"/>
        </div>
        <button class="btn waves-effect waves-light red " type="submit" name="action" ng-click="enviarForm(chamado)" ng-disabled="!formChamado.$valid">Enviar
            <i class="material-icons right">send</i>
