--- a/paginas/formularioChamado.html
+++ b/paginas/formularioChamado.html
@@ -47,6 +47,11 @@
                 <td> <a  onclick="capturarImagem();"  class="waves-effect waves-circle waves-red btn-floating secondary-content red"><i class="material-icons">photo</i></a>
                 </td>
               </tr>
+               <tr>
+                <td> stop</td>
+                <td> <a  onclick="pararCaptura();"  class="waves-effect waves-circle waves-red btn-floating secondary-content red"><i class="material-icons">photo</i></a>
+                </td>
+              </tr>
             </tbody>
        </table> 
        <div >
