--- a/paginas/formularioChamado.html
+++ b/paginas/formularioChamado.html
@@ -33,6 +33,12 @@
         </div>
         <div class="row">
           <div class="input-field col 12">
+            <input id="descricao" type="text" class="validate" ng-model="chamado.descricao">
+            <label for="descricao">Descrição</label>
+          </div>
+        </div>
+        <div class="row">
+          <div class="input-field col 12">
             <input id="ref" type="text" class="validate" ng-model="chamado.ref">
             <label for="ref">Ponto de Referência</label>
           </div>
