alteraçoes do Designer

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     
 <div class="navbar-fixed">
   <nav>
-    <div class="nav-wrapper red darken-3">
+    <div class="nav-wrapper red ">
       <a href="#!" class="brand-logo">Modulo Samu</a>
       <a href="#" data-activates="mobile-demo" class="button-collapse show-on-large"><img style="margin-top:20%;" src="fonts/menu.svg"></a>
       <ul class="side-nav" id="mobile-demo">
