--- a/paginas/sobre.html
+++ b/paginas/sobre.html
@@ -1,6 +1,7 @@
 <div class="content">
  <h5 class="header center" id="titulo">Sobre</h5>
- <p class="text" id="texto" > Aplicativo desenvolvido com intuito de atender chamados emergências </p>
+ <p class="text" id="texto" > Aplicativo desenvolvido com intuito de atender chamados emergências da Policia, SAMU, Bombeiros, e Delegacia da Mulher. </p>
+ <p class="text" id="texto" > Nesse protótipo está presente o módulo SAMU, que Realiza os chamados emergências do <span id="textoNegrito">Serviço de Atendimento Móvel de Urgência (SAMU)</span>. </p>
  <p class="text" id="texto" > O app vem também com uma área de ajuda na resolução de certos problemas(por exemplo a área de um paralelogramo), que facilita no momento do estudo/apredizagem. </p>
  <h5 class="header center" id="titulo">Integrantes do Projeto</h5>
 
