--- a/paginas/formularioChamado.html
+++ b/paginas/formularioChamado.html
@@ -61,7 +61,7 @@
       </tbody>
     </table> 
     
-  <button class="btn red" type="submit" name="action" ng-click="enviarForm(chamado)" ng-disabled="!formChamado.$valid"><a href="#sobre">Enviar 
+  <button class="btn red" type="submit" name="action" ng-click="enviarForm(chamado)" ng-disabled="!formChamado.$valid"><a>Enviar 
    <i class="material-icons right">send</i>
    </a> 
  </button>
