add foto michael

--- a/paginas/sobre.html
+++ b/paginas/sobre.html
@@ -32,7 +32,7 @@
   <div class="card-panel grey lighten-5 z-depth-1">
     <div class="row valign-wrapper">
       <div class="col s5">
-        <img src="img/vitor.jpg"  alt="" class="circle responsive-img"/> <!-- notice the "circle" class -->
+        <img src="img/vitor.png"  alt="" class="circle responsive-img"/> <!-- notice the "circle" class -->
       </div>
       <div class="col s10">
         <span class="black-text">
@@ -56,7 +56,7 @@
   <div class="card-panel grey lighten-5 z-depth-1">
     <div class="row valign-wrapper">
       <div class="col s5">
-        <img src="img/Celso.jpg"  alt="" class="circle responsive-img"/> <!-- notice the "circle" class -->
+        <img src="img/michael.jpg"  alt="" class="circle responsive-img"/> <!-- notice the "circle" class -->
       </div>
       <div class="col s10">
         <span class="black-text">
