--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 
 <script src='js/rotas.js'></script>
 <script src='js/camera.js'></script>
+<script src='js/impresora.js'></script>
 <script type="text/javascript" src="js/geolocalizacao.js"></script>
 <script type="text/javascript" src="cordova.js"></script>
 
